--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,15 @@
         min-width: initial !important;
         max-width: 100% !important;
         margin: 0 auto !important;
+        font-size: 14px;
     }
 
     h1 {
         margin-top: 0 !important;
+        font-size: 28px !important;
+    }
+
+    h2 {
+        font-size: 21px !important;
     }
 }
