--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@
         max-width: 100% !important;
         margin: 0 auto !important;
         font-size: 14px;
+        line-height: 1.2 !important;
     }
 
     h1 {
